--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -415,10 +415,9 @@
             <div class="modal-body">  
                 <div class="container-fluid">
                     <div class="full-width-tabs" ng-show="isEditingLocation == false">
-                        <label class="control-label">Are you adding a custom location or joining an existing market?</label>
                         <ul class="nav nav-tabs location-tabs" role="tablist">
-                              <li role="presentation" class="active full-width"><a id="marketLocationTab" href="/vendor/#marketLocation" ng-click="doMarketLocation()" role="tab" data-toggle="tab">Join a Market</a></li>
-                              <li role="presentation" class="full-width"><a id="customLocationTab" href="/vendor/#customLocation" ng-click="doCustomLocation()" role="tab" data-toggle="tab">Add a New Custom Location</a></li>
+                              <li role="presentation" class="active full-width"><a id="marketLocationTab" href="/vendor/#marketLocation" ng-click="doMarketLocation()" role="tab" data-toggle="tab">Join Existing Market</a></li>
+                              <li role="presentation" class="full-width"><a id="customLocationTab" href="/vendor/#customLocation" ng-click="doCustomLocation()" role="tab" data-toggle="tab">Create New Custom Location</a></li>
                         </ul>
                     </div>
                     <div class="tab-content">
@@ -545,9 +544,10 @@
                         <div class="tab-pane active" id="marketLocation">
                             <form role="form" name="marketForm" novalidate>
                                 <div class="form-group">
-                                    <label>Select the Market You're Selling At</label>
+                                    <label>Select the Market You're Selling At:</label>
                                     <select ng-show="StateService.getAvailableMarketList().length > 0" ng-model="newLocationMarket" id="modalMarketPicker" class="form-control" ng-options="market.id as market.name for market in StateService.getAvailableMarketList()"></select>
-                                    <p ng-hide="StateService.getAvailableMarketList().length > 0">It looks like you're already selling at all the markets in town! Try <a class="pointer beLocal-a" ng-click="manuallyTriggerCustomLocation()">creating</a> a new custom location instead.</p> 
+                                    <p ng-hide="StateService.getAvailableMarketList().length > 0" class="medium-margin">You're already selling at all the markets in town! 
+                                    <br>Try <a class="pointer beLocal-a" ng-click="manuallyTriggerCustomLocation()">creating</a> a new custom location instead.</p> 
                                 </div>   
                             </form>
                         </div>
