added examples populating search views

--- a/src/client/app/views/productsearch.html
+++ b/src/client/app/views/productsearch.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="ProductsearchCtrl">
-	<div ng-repeat="product in getProducts()">
-		{{product}}
+	<div ng-repeat="product in products">
+		{{product.name}}
 	</div>
 </div>
