--- a/src/client/app/views/vendorsearch.html
+++ b/src/client/app/views/vendorsearch.html
@@ -1,1 +1,6 @@
-<p>This is the vendorSearch view.</p>
+<div ng-controller="VendorsearchCtrl">
+	<div ng-repeat="vendor in vendors">
+		{{vendor.companyName}}
+	</div>
+</div>
+
