--- a/src/client/app/views/search.html
+++ b/src/client/app/views/search.html
@@ -13,34 +13,45 @@
     </div>
 </div>
 
-<!-- Product Search Results -->
-<div ng-show="productResults.length > 0" class="container container-home-page">
-    <div class="row">
+<div class="container container-home-page">
+    <div ng-show="productResults.length == 0 && marketResults.length == 0 && vendorResults.length == 0" class="row">
         <!-- DISPLAY ITEMS -->
         <div class="col-sm-10">
             <div class="new-heading-style">
                 Search Results for "{{query}}"
             </div>
-            <div class="row" style="padding-top:5px" id="masonry-container">
-                <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in productResults" >
-                    <product-card data="item"></product-card>
+        </div>
+    </div>
+
+    <!-- Product Search Results -->
+    <div ng-show="productResults.length > 0">
+        <div class="row">
+            <!-- DISPLAY ITEMS -->
+            <div class="col-sm-10">
+                <div class="new-heading-style">
+                    Search Results for "{{query}}"
+                </div>
+                <div class="row" style="padding-top:5px" id="masonry-container">
+                    <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in productResults" >
+                        <product-card data="item"></product-card>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<!-- Vendor Search Results -->
-<div ng-show="vendorResults.length > 0" class="container container-home-page">
-    <div class="row">
-        <!-- DISPLAY ITEMS -->
-        <div class="col-sm-10">
-            <div class="new-heading-style">
-                Search Results for "{{query}}"
-            </div>
-            <div class="row" style="padding-top:5px">            
-                <div ng-repeat="vendor in vendorResults">
-                    <vendor-card data="vendor"></vendor-card>
+    <!-- Vendor Search Results -->
+    <div ng-show="vendorResults.length > 0">
+        <div class="row">
+            <!-- DISPLAY ITEMS -->
+            <div class="col-sm-10">
+                <div class="new-heading-style">
+                    Search Results for "{{query}}"
+                </div>
+                <div class="row" style="padding-top:5px">            
+                    <div ng-repeat="vendor in vendorResults">
+                        <vendor-card data="vendor"></vendor-card>
+                    </div>
                 </div>
             </div>
         </div>
