Added product details modal to search results.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -93,9 +93,9 @@
                 </div>
                 <div class="col-sm-7">
                   <div class="responsive-center">
-                    <h2 class="product-details-header">{{product.name}}</h2>
+                    <h2 class="vendor-card-name product-details-header">{{product.name}}</h2>
                     <p class="product-details-text no-bottom-margin">
-                      <a class="pointer product-detail-vendor" ng-click="goToVendorDetails(product.vendor.id)">{{product.vendor.company_name}}</a>         
+                      <a class="plain-text-font pointer product-detail-vendor" ng-click="goToVendorDetails(product.vendor.id)">{{product.vendor.company_name}}</a>         
                     </p>
                   </div>
                   <p>
