--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -407,12 +407,12 @@
 <div class="modal fade" id="locationModal">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header edit-location-modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 ng-hide="isEditingLocation" class="modal-title">Add New Location<br /><small>Please complete the following fields to add a new location</small></h4>
                 <h4 ng-show="isEditingLocation" class="modal-title">Edit Location<br /><small>Please change any of the fields below to update an existing location</small></h4>                
             </div>
-            <div class="modal-body">  
+            <div class="modal-body edit-location-modal-body">  
                 <div class="container-fluid">
                     <div class="full-width-tabs" ng-show="isEditingLocation == false">
                         <ul class="nav nav-tabs location-tabs" role="tablist">
