--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -4,12 +4,21 @@
 
 */
 
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  background-color: #353535;
+}
+
 .nav-shadow {
   text-shadow: 0px 0px 5px #CFF4BF;
 }
 
+.customer-nav .active{
+  text-decoration: underline;
+}
+
 .navbar {
-  background-color: #696969 !important;
+  background-color: #444444 !important;
   height: 150px !important;
   margin-bottom: 50px;
 }
