--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -4,11 +4,6 @@
 
 */
 
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #353535;
-}
-
 .nav-shadow {
   text-shadow: 0px 0px 5px #CFF4BF;
 }
@@ -18,13 +13,15 @@
 }
 
 .navbar {
-  background-color: #444444 !important;
-  height: 150px !important;
+  background-color: #FFFFFF !important;
+  height: 140px !important;
   margin-bottom: 50px;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3) !important;
 }
 
 .nav-bar-top {
   padding-bottom: 50px;
+  padding-right: 10px;
 }
 
 .logo {
@@ -38,10 +35,6 @@
 
 .logo-green {
   color: #78be25 !important;
-}
-
-.white-text {
-  color: #FFFFFF !important;
 }
 
 .medium-margin {
@@ -83,8 +76,9 @@
 .top-nav-large {
   background-color: #FAFAFA;
   border-bottom: 1px solid #e5e1dd;
-  border-top: 5px solid #89cc1d;
   padding: 10px;
+  margin-top: 35px;
+  padding-top: 15px;
 }
 
 .top-nav-large li a {
@@ -510,7 +504,6 @@ div.box a {
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
