Header UI for very large & large displays

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -15,7 +15,7 @@
   
   <!-- TRENDING TAB -->
   <div class="tab-pane active" id="trending">
-    <div class="container container-home-page">
+    <div class="customer-container">
         <div class="row">
 
             <!-- DISPLAY ITEMS FOR EACH CATEGORY -->
