--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -4,6 +4,38 @@
 
 */
 
+/*NAV BAR RESPONSIVENESS*/
+
+@media (max-width: 1000px) {
+
+  .beLocal-search {
+    width:400px !important;
+  }
+
+  .navbar-collapse {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+}
+
+
+ul {
+  display: inline-block;
+}
+
+.header-container {
+  max-width: 1350px;
+  margin-left: auto;
+  margin-right: auto; 
+}
+
+.customer-container {
+  margin-left: auto;
+  margin-right: auto;   
+  max-width: 1300px;
+}
+
 .nav-shadow {
   text-shadow: 0px 0px 5px #CFF4BF;
 }
@@ -24,8 +56,12 @@
   padding-right: 10px;
 }
 
-.logo {
-  top: -100px;
+.logo-header {
+  margin-top: -100px;
+}
+
+.logo-header img{
+  width:300px;
 }
 
 .customer-nav{
@@ -99,16 +135,6 @@
 
 .top-nav-large li.active{
   color: red;
-}
-
-.logo {
-  text-align: center;
-}
-
-
-
-.logo img {
-  width: 100%;
 }
 
 .location-tabs {
@@ -626,10 +652,10 @@ body {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
-    .navbar-fixed-top {
+/*    .navbar-fixed-top {
         top: 0;
         border-width: 0 0 1px;
-    }
+    }*/
     .navbar-collapse.collapse {
         display: none!important;
     }
