Changed category dropdown
Added bootstrap styling and also removed default value in favour of
adding an Uncategorized category server-side. (updateTagCategory.py has
been updated to reflect this).

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -392,8 +392,7 @@
                             <div class="col-sm-12">
                                 <label for="item-name">Item Category<br></label>
                                 <div class="form-group"  ng-class="{ 'has-error' : newItemSubmitted && itemForm.itemCategory.$invalid }">
-                                    <select ng-options="category.id as category.name for category in categoryList" ng-model="itemCategory">
-                                        <option value="">  Select a Cateogry </option>
+                                    <select class="form-control" ng-options="category.id as category.name for category in categoryList" ng-model="itemCategory">
                                     </select>
                                 </div>
                             </div>
