--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -37,22 +37,32 @@
                 Sample Category
               </div>
               <div class="row" style="padding-top:5px" id="masonry-container">
-                <div ng-hide="showCategory" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts" >
+                <div ng-hide="showCategory || showTag" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts" >
                   <product-card data="item"></product-card>
                 </div>
                 <div ng-show="showCategory" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in selectedCategoryProducts" >
                   <product-card data="item"></product-card>
                 </div>
+                <div ng-show="showTag" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in selectedTagProducts" >
+                  <product-card data="item"></product-card>
+                </div>
               </div>
             </div>
 
-            <!-- DISPLAY SIDE BAR OF ALL CATEGORIES -->
+            <!-- DISPLAY SIDE BAR OF ALL CATEGORIES & TAGS-->
             <div class="col-sm-2">
                 <h3>Category</h3>
                 <ul class="" role="">
                     <li><a ng-click="getAllProducts()">All Products</a></li>
                     <li class="" ng-repeat="category in categoryList">
                       <a ng-click="getProductsWithCategory(category)">{{category.name}}</a>
+                    </li>
+                </ul><br>
+                <h3>Tags</h3>
+                <ul class="" role="">
+                    <li><a ng-click="getAllProducts()">All Products</a></li>
+                    <li class="" ng-repeat="tag in tagList">
+                      <a ng-click="getProductsWithTag(tag)">{{tag.name}}</a>
                     </li>
                 </ul>
             </div>
