--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -34,7 +34,7 @@
             <!-- DISPLAY ITEMS FOR EACH CATEGORY -->
             <div class="col-sm-10">
               <div class="new-heading-style">
-                Sample Category
+                {{selectedCategory}}
               </div>
               <div class="row" style="padding-top:5px" id="masonry-container">
                 <div ng-hide="showCategory" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts" >
@@ -51,7 +51,7 @@
                 <hr>
                 <p class="small-header">Categories</p>
                 <ul class="tag-list" role="">
-                    <li><a class="plain-text-font" ng-class="{'active' : selectedCategory === 'all'}" ng-click="getAllProducts()">All Products</a></li>
+                    <li><a class="plain-text-font" ng-class="{'active' : selectedCategory === 'All Products'}" ng-click="getAllProducts()">All Products</a></li>
                     <li class="" ng-repeat="category in categoryList">
                       <a class="plain-text-font" ng-class="{'active' : selectedCategory === category.name}" ng-click="getProductsWithCategory(category)">{{category.name}}</a>
                     </li>
