Fixed CSS styles
Sublime pushed these to a temp version of our CSS file for some reason.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1169,6 +1169,11 @@ hr{
   padding: 0px;
 }
 
-.tag-list > li > a{
-  color: #403e3b;  
+.tag-list > li > a {
+  color: #403e3b;
+  cursor: pointer;
+}
+
+.tag-list > li > .active {
+  text-decoration: underline;
 }
