--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -43,7 +43,7 @@
                 <div ng-show="showCategory" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts | filter: {category:selectedCategory}" >
                   <product-card data="item"></product-card>
                 </div>
-                <div ng-show="showTag" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts | filter: {tags:selectedTag}" >
+                <div ng-show="showTag" class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts | filterMultiple:{tags:selectedTags} | unique:id" >
                   <product-card data="item"></product-card>
                 </div>
               </div>
@@ -60,11 +60,17 @@
                     </li>
                 </ul><br>
                 <h3>Tags</h3>
-                <ul class="" role="">
+                <ul class="tag-list">
+                    <li ng-repeat="tag in tagList">
+                        <label class="checkbox"> 
+                           <input type="checkbox" ng-model="tag.checked" ng-change="getProductsWithTag(tag)"> &nbsp; {{tag.name}}
+                        </label>
+                    </li>
+                    <!--                
                     <li><a ng-click="getAllProducts()">All Products</a></li>
                     <li class="" ng-repeat="tag in tagList">
                       <a ng-click="getProductsWithTag(tag)">{{tag.name}}</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
