--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -1,5 +1,5 @@
-<nav-bar></nav-bar>
-
+<div class="hidden-xs"><nav-bar></nav-bar></div>
+<div class="visible-xs"><navbar-x-s></navbar-x-s></div>
 
 <!-- EACH OF THE TABS -->
 <div class="tab-content">
