--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" ng-click="resetWarning()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <html-comp content="warningHTML"></html-comp>
 </div>
-<nav-bar></nav-bar>
+<navbar-x-s></navbar-x-s>
 
 <div class="container-fluid new-formatting-container">  
     <br><br>
