--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -49,23 +49,8 @@
   </div>    
 </div> 	
 
-
-<!-- BE LOCAL FOOTER (TO BE INJECTED LATER) -->
-<div class="footer">
-  <div class="row">
-    <div class="col-xs-6">
-      logo & links here
-    </div>
-    <div class="col-xs-6 pull-right">
-      Facebook | Pinterest | Twitter | beLocal@blah.com
-    </div>
-  </div>
-</div>
-
-<div class="footerCopyright">
-  <span class="glyphicon glyphicon-copyright-mark" style="font-size:12px;"></span>
-   2014 beLocal, Inc.
-</div>
+<!-- INJECTING FOOTER.HTML -->
+<footer></footer>
 
 <!-- Product Details Modal -->
 <div class="modal fade product-details-model" tabindex="-1" id="productDetailsModal" role="dialog" aria-labelledby="productDetailsLabel" aria-hidden="true">
@@ -91,7 +76,7 @@
                 </div>
               </div>            
             </div>
-            
+
             <div class="modal-footer no-top-margin">
                 <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal" ng-click="hideProductDetailsModal()">Close</button>
             </div>
