--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -1,9 +1,9 @@
 <!-- NAVBAR -->
-<nav-bar></nav-bar>
+<div class="hidden-xs"><nav-bar></nav-bar></div>
+<div class="visible-xs"><navbar-x-s></navbar-x-s></div>
 
 <!-- SELLER DETAILS -->
-<div class="container-fluid new-formatting-container">  
-    <br><br>
+<div class=" new-formatting-container customer-container3">  
     <div class="row vendor-profile-header">
         <div class="col-md-5 new-vendor-avatar">
             <img ng-src="{{vendorDetails.vendor.photo.image_url}}">
@@ -188,9 +188,9 @@
 	    </div>
 	</div>
 
-</div>
-<div class="footer">
-  <p>♥ from the beLocal team</p>
-</div>
+<!-- INJECTING FOOTER.HTML -->
+<footer></footer>
+
+
 <!-- END OF CONTAINTER-SELLER -->
 
